# polyticker-rs

./: Cargo.toml  README.md
polyticker/: Cargo.toml
polyticker-lib/: Cargo.toml
polyticker-lib/src/: lib.rs
polyticker-lib/src/common/: trade.rs
polyticker-lib/src/exchange/: mod.rs
polyticker-lib/src/request/: mod.rs
polyticker-lib/src/request/market/: grouped_daily.rs  mod.rs
polyticker-lib/src/request/stocks/: aggregates.rs  grouped_daily.rs
polyticker-lib/src/util/: counter.rs  mod.rs
polyticker-lib/src/websocket/: mod.rs
polyticker-lib/src/websocket/crypto/: mod.rs
polyticker-lib/src/websocket/stocks/: mod.rs
polyticker/src/: main.rs
