[package]
name = "polyticker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyticker-lib = { path = "../polyticker-lib"}
anyhow = "1"
clap = { version = "4", features = ["derive", "env"]}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0"

